<resources>
    <string name="app_name">Habits</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="name">Name :</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="registration">Registration</string>
    <string name="register_me">Register Me</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="verification_code">Verification Code :</string>
    <string name="verify">Verify</string>
    <string name="password">Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_registration">New User Registration</string>
    <string name="select_habit">Select Habit :</string>
    <string name="your_habit">Your Habit :</string>
    <string name="or">OR</string>
    <string name="add_new_habit">Add New Habit :</string>
    <string name="add_habit">Add Habit</string>
    <string name="number_of_days">Number of Days :</string>
    <string name="days_left">Days left:</string>
    <string name="task">Task :</string>
    <string name="perform_task">Perform task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="statistic_for_this_habit">Statistic for this habit</string>
    <string name="see_statistic">See statistics</string>
    <string name="perform_this_task">Perform This Task</string>
    <string name="total_days_you_took">Total days you took for complete this habit :</string>
    <string name="habit_will_finish_date">Habit will finish on :</string>
    <string name="habit_finished_date">Habit finished on :</string>
    <string name="completed_daily_task">Completed daily task? :</string>
    <string name="habit_status">Habit Status :</string>
    <string name="habit_start_date">Habit stated on :</string>
    <string name="question">Question :</string>
    <string name="answer">Answer :</string>
    <string name="motivational_quote_example">\"Never Give Up\"</string>
    <string name="inprogress_yes">In Progress , Performed Today\'s task</string>
    <string name="inprogress_no">In progress , Till Not Performed Today\'s task</string>
    <string name="habit_completed">You have successfully completed this habit</string>
    <string name="menu_title_logout">Logout</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_completed_habits">Completed habits</string>
    <string name="menu_title_see_reseted_habits">Reseted habits</string>
    <string name="menu_title_add_new_habit">Add new habit</string>
    <string name="menu_title_habit_faq">FAQs</string>
    <string name="menu_title_feedback">Feedback</string>
    <string name="que_already_member">Already Registered? <u> Login </u></string>
    <string name="que_new_member">Need an account? <u> Register Here </u></string>
    <string name="que_did_you_perform_this_task">Did you perform this task?</string>
    <string name="notification_daily_title">Habits</string>
    <string name="notification_daily_content">Have you check your task ?</string>
    <string name="notification_daily_task_not_completed_title">Habits</string>
    <string name="notification_daily_task_not_completed_content">Some of your habits are reseated because you have not completed your daily task.</string>
    <string name="heading_registration">Registration</string>
    <string name="heading_reset_password">Reset your password</string>
    <string name="heading_forgot_password">Forgot Password</string>
    <string name="heading_login">Login</string>
    <string name="heading_verification_code_description">A verification code has been sent to your number. Please enter the code to continue.</string>
    <string name="heading_verification_code">verification code</string>
    <string name="heading_add_habit">Add new habit</string>
    <string name="heading_perform_habit">Perform your habit</string>
    <string name="heading_did_you_complete_your_habit">Did you complete your habit ?</string>
    <string name="heading_habit_statistics">Your Habit Statistics</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="hint_passssword">Enter your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="hint_remember_me">Remember Me</string>
    <string name="hint_verification_code">Enter your code</string>
    <string name="hint_enter_new_habit">Enter your new habit</string>
    <string name="hint_enter_how_many_days_you_need">Enter number of days for this habit</string>
    <string name="hint_you_have_completed">You have Completed</string>
    <string name="hint_days">days.</string>
    <string name="dialog_please_wait">Please Wait</string>
    <string name="msg_password_reset_success">Your password changed successfully.</string>
    <string name="msg_verification_success">Your verification is successful.</string>
    <string name="msg_verification_sent_success">Verification code set successfully to your phone number.</string>
    <string name="msg_no_habits">You don\'t have any Habits.\nYou can click on + button to add.</string>
    <string name="msg_no_finished_habits">You have not finished any Habits.\nYour habits will show up here once you complete them.</string>
    <string name="msg_no_reseted_habits">No habit has been reset.</string>
    <string name="msg_your_new_habit_added_successfully">Your new habit added successfully.</string>
    <string name="msg_logout_successfully">You logout successfully.</string>
    <string name="msg_task_performed_successfully">Action performed successfully.</string>
    <string name="msg_habit_finished_successfully">Congratulations..!\nYou have successfully finished this habit.</string>
    <string name="msg_task_reset_successfully">Your habit has been reset successfully.</string>
    <string name="msg_statistic_will_show_here">Your statistic for this habit will show here.</string>
    <string name="err_no_internet_connection">Please check your network connection.\nYour device is not connected with internet.</string>
    <string name="err_please_try_again_your_firebase_auth_failed">Please try again\nYour Firebase authentication is failed</string>
    <string name="err_please_try_again">Please try again</string>
    <string name="err_please_try_again_later">Please try again later</string>
    <string name="err_please_try_again_technical_issue">We are facing technical issue.\nPlease try again later.</string>
    <string name="err_verification_code_not_correct">Your verification code is not correct.</string>
    <string name="err_enter_phone">Please Enter Your Phone Number</string>
    <string name="err_enter_valid_phone">Please Enter Valid Phone Number</string>
    <string name="err_phone_already_in_use">The number that you entered is already in use.</string>
    <string name="err_no_account_for_this_phone">There is no account created by using this number.</string>
    <string name="err_enter_password">Please Enter Your Password</string>
    <string name="err_enter_valid_password">Please Enter Valid Password</string>
    <string name="err_enter_valid_confirm_password">Please Enter Valid Confirm Password</string>
    <string name="err_enter_email">Please Enter Your Email</string>
    <string name="err_enter_valid_email">Please Enter Valid Email</string>
    <string name="err_enter_name">Please Enter Your Name</string>
    <string name="err_enter_valid_verification_code">Please Enter Valid Verification Code</string>
    <string name="err_enter_verification_code">Please Enter Verification Code</string>
    <string name="err_enter_confirm_password">Please Confirm Your Password.</string>
    <string name="err_confirm_password_not_match">Confirm password should be match with your password.</string>
    <string name="err_credential_not_match">Please check your Phone Number/Password.</string>
    <string name="err_enter_habit">Please enter your habit</string>
    <string name="err_enter_days">Please enter number of days</string>
    <string name="err_enter_valid_days">Please enter valid number of days</string>
    <string name="err_you_have_alrady_performed_this_task">You have alrady performed this task</string>
    <string-array name="str_predefine_habits">
        <item> ~~~ Select Predefine Habits ~~~ </item>
        <item>Take 30-minute early morning walks.</item>
        <item>Do Yoga every day.</item>
        <item>Keep a food diary or journal.</item>
        <item>Make and drink healthy smoothies.</item>
        <item>Quit smoking.</item>
        <item>Keep a sleep log.</item>
        <item>Try a new form of exercise.</item>
        <item>Help your friends with chores.</item>
        <item>Know and consider your personality.</item>
        <item>Reward yourself.</item>
    </string-array>
    <string-array name="str_faq_question">
        <item><b>Q1.</b> How does this app work?</item>
        <item><b>Q2.</b> What do we get reminders?</item>
        <item><b>Q3.</b> What are motivational quotes?</item>
        <item><b>Q4.</b> Can I reset my habit?</item>
        <item><b>Q5.</b> how do I check my status?</item>
        <item><b>Q6.</b> Will my habit restart to the 1st day, if I miss one day?</item>
    </string-array>
    <string-array name="str_faq_answer">
        <item><b>Ans: </b>The app focuses on registering habits that the user wants to form and keeps track of the specified amount of days. To motivate the user to follow their habits, the app provides daily motivational quotes. The user can also keep a track on their status regarding their habits by the provided graphical visualization provided. </item>
        <item><b>Ans: </b>You will receive a notification every day to remind you of your habit(s).</item>
        <item><b>Ans: </b>To motivate the user to follow their habits, the app provides daily motivational quotes.</item>
        <item><b>Ans: </b>Yes, you can reset your habit and it will start again from day 1.</item>
        <item><b>Ans: </b>You can swipe right on your habit and see the graphical report of that particular habit.</item>
        <item><b>Ans: </b>es, if you miss any day your habit will be reset and it will start from day 1.</item>
    </string-array>
    <string name="instructions_details">\n\u25CF What’s the Finest Propensity Tracker App to Assist You Reach Your Objectives?
        \n\n\u25CF Habit will assist you to get free of awful propensities and learn modern, great ones.
        \n\n\u25CF To succeed, you must learn to create and keep up great propensities.
        \n\n\u25CF You would like to teach, mettle and difficult work to keep those propensities for a long time.
        \n\n\u25CF But rehashing the required behavior for 21 days will make this behavior to gotten to be your propensity.
        \n\n\u25CF The application will assist you\n</string>
    <string name="instruction">Instruction</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_completed_habits">Completed Habits</string>
    <string name="title_activity_add_new_habit">Add New Habit</string>
    <string name="title_activity_perform_habit">Perform Habit</string>
    <string name="title_activity_statistic">Habit Statistic</string>
    <string name="title_activity_reseted_habits">Reseted Habit</string>
    <string name="title_activity_habit_faq">Habit FAQs</string>
</resources>