<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="10"
    tools:context=".Activities.Registration">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardCornerRadius="5dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="30dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/heading_registration"
                            android:paddingBottom="10dp"
                            android:shadowColor="@color/greyDark"
                            android:textAlignment="center"
                            android:textColorHint="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/name"
                                android:textColor="@color/black" />

                            <EditText
                                android:id="@+id/et_register_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:background="@drawable/border_round_2dp"
                                android:hint="@string/hint_name"
                              android:maxLength="16"  android:padding="12dp"
                                android:singleLine="true"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/phone"
                                android:textColor="@color/black" />

                            <EditText
                                android:id="@+id/et_register_phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:background="@drawable/border_round_2dp"
                                android:hint="@string/hint_phone"
                                android:inputType="number"
                                android:maxLength="10"
                                android:padding="12dp"
                                android:singleLine="true"
                                android:text="6479010329"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/password"
                                android:textColor="@color/black" />

                            <EditText
                                android:id="@+id/et_register_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:background="@drawable/border_round_2dp"
                                android:hint="@string/hint_passssword"
                                android:inputType="textPassword"
                                android:padding="12dp"
                         android:maxLength="16"       android:singleLine="true"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/confirm_password"
                                android:textColor="@color/black" />

                            <EditText
                                android:id="@+id/et_register_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:background="@drawable/border_round_2dp"
                                android:hint="@string/hint_confirm_password"
                                android:inputType="textPassword"
                                android:padding="12dp"
                                android:maxLength="16"
                                android:singleLine="true"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="@string/email"
                                android:textColor="@color/black" />

                            <EditText
                                android:id="@+id/et_register_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:background="@drawable/border_round_2dp"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress"
                                android:padding="12dp"
                                android:singleLine="true"
                                android:maxLength="32"
                                android:textColor="@android:color/black"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp">


                            <Button
                                android:id="@+id/btnRegisterMe"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginRight="2dp"
                                android:layout_weight="1"

                                android:background="@drawable/button_primary"
                                android:onClick="onBtnRegisterMeClick"
                                android:text="@string/register_me"
                                android:textColor="@color/button_primary_textcolor"
                                android:textSize="14sp" />

                            <Button
                                android:id="@+id/btnCancel"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="2dp"
                                android:layout_weight="1"
                                android:background="@drawable/button_secondary"
                                android:onClick="onBtnCancelClick"
                                android:text="@string/cancel"
                                android:textColor="@color/button_secondary_textcolor"
                                android:textSize="14sp" />


                        </LinearLayout>


                    </LinearLayout>


                </ScrollView>


            </android.support.v7.widget.CardView>


        </LinearLayout>

        <TextView
            android:id="@+id/tvAlreadyRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:onClick="onTvAlreadyRegisterClick"
            android:padding="10dp"
            android:text="@string/que_already_member"
            android:textColor="@color/blue_link" />

    </LinearLayout>


</LinearLayout>