<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.VerifyPhoneNumberForForgotPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/heading_verification_code"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/heading_verification_code_description"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/verification_code"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_forgotpassword_VerificationCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/border_round_2dp"
                        android:hint="@string/hint_verification_code"
                        android:inputType="number"
                        android:maxLength="6"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">


                    <Button
                        android:id="@+id/btnForgotPasswordVerify"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"

                        android:background="@drawable/button_primary"
                        android:onClick="onBtnForgotPasswordVerifyClick"
                        android:text="@string/verify"
                        android:textColor="@color/button_primary_textcolor"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnForgotPasswordCancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_secondary"
                        android:onClick="onBtnForgotPasswordCancelClick"
                        android:text="@string/cancel"
                        android:textColor="@color/button_secondary_textcolor"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>


</LinearLayout>