<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_habit_list_adapter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center"
    android:background="@color/background"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/adapter_habit_list"
        android:gravity="top|center"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task" />

            <TextView
                android:id="@+id/txt_adapter_habitlist_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days_left" />

            <TextView
                android:id="@+id/txt_adapter_habitlist_numberOfDaysLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_days" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_adapter_background_habitlist"
        android:gravity="top|center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:padding="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/perform_this_task"
                    android:textColor="@color/txtview_white" />

                <ImageView
                    android:id="@+id/iv_adapter_habitlist_performTask"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:tint="@color/white"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_action_list_check" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/see_statistic"
                    android:textColor="@color/txtview_white" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="18dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_action_statistics" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</com.daimajia.swipe.SwipeLayout>